--- a/landmine/ui/verify.html
+++ b/landmine/ui/verify.html
@@ -709,7 +709,7 @@
 		"type": "function"
 	}
 ] ;
-		const coAddress = "0xC3B7722CAC11e2A00946f220ad6aE00348b67FBE"
+		const coAddress = "0x"
         
 
         const mycontract = new web3.eth.Contract(abi, coAddress);
